...
            text = "Welcome to Pocket Tutor!",
            style = MaterialTheme.typography.headlineMedium,
            modifier =
                Modifier.padding(horizontal = 16.dp)
                    .padding(top = 32.dp)
                    .fillMaxWidth()
                    .testTag("welcomeText"))
      }) { paddingValues ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(paddingValues)
                    .padding(16.dp)
...
                  onValueChange = {
                    if (it.length <= context.resources.getInteger(R.integer.user_first_name)) {
                      firstName = it
                    }
                  },
                  label = { Text("First Name") },
                  modifier = Modifier.fillMaxWidth().testTag("firstNameField"),
                  singleLine = true,
                  enabled = !isVerified // Disable if verified
                  )

              OutlinedTextField(
                  value = lastName,
                  onValueChange = {
                    if (it.length <= context.resources.getInteger(R.integer.user_last_name)) {
                      lastName = it
                    }
                  },
                  label = { Text("Last Name") },
                  modifier = Modifier.fillMaxWidth().testTag("lastNameField"),
                  singleLine = true,
                  enabled = !isVerified // Disable if verified
                  )

              // Section and Academic Level
              SectionSelector(section, !isVerified)
...
                  onPhoneNumberChange = { phoneNumber = it })

              // Role Selection
              Column(modifier = Modifier.fillMaxWidth()) {
                Text("You are a:", style = MaterialTheme.typography.titleSmall)
                SingleChoiceSegmentedButtonRow(
                    modifier = Modifier.fillMaxWidth().testTag("roleSelection"),
                ) {
                  listOf(Role.STUDENT, Role.TUTOR).forEach { r ->
                    SegmentedButton(
                        shape = SegmentedButtonDefaults.baseShape,
                        selected = r == role,
                        onClick = { role = r },
...
                              "Please fill all fields with valid information!",
                              Toast.LENGTH_SHORT)
                          .show()
                    }
                  },
                  enabled = !isLoading, // Disable button when loading
                  modifier = Modifier.fillMaxWidth().height(48.dp).testTag("confirmButton")) {
                    if (isLoading) {
                      CircularProgressIndicator(
                          modifier = Modifier.size(24.dp), color = Color.White, strokeWidth = 2.dp)
                    } else {
                      Text("Confirm your details")
                    }
...
