...
              trailingIcon = {
                ExposedDropdownMenuDefaults.TrailingIcon(expanded = countryCodeExpanded)
              },
              modifier =
                  Modifier.menuAnchor()
                      .fillMaxWidth()
                      .testTag("countryCodeField") // Add test tag here
              )
          ExposedDropdownMenu(
              modifier = Modifier.fillMaxWidth(),
              expanded = countryCodeExpanded,
              onDismissRequest = { countryCodeExpanded = false }) {
                countries.forEach { country ->
...
        onValueChange = { newValue ->
          if (newValue.length <= maxPhoneNumberLength) {
            onPhoneNumberChange(newValue)
          }
        },
        label = { Text("Phone Number") },
        modifier = Modifier.weight(2f).testTag("phoneNumberField"), // Ensure test tag is set
        singleLine = true,
        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Phone))
  }
}

fun isPhoneNumberValid(countryCode: String, phoneNumber: String): Boolean {
...
